# finance-tracker

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 477a20dca5fe_initial_migration.py  d48485081deb_add_description_in_category.py
app/: main.py
app/api/: auth.py
app/api/v1/endpoints/: categories.py
app/auth/: dependencies.py
app/core/: config.py  redis_client.py
app/crud/: __init__.py  category.py  user.py
app/db/: __init__.py  base.py  session.py
app/models/: __init__.py  category.py  transaction.py  user.py
app/schemas/: category.py
app/services/: __init__.py
tests/: conftest.py  test_auth_api.py  test_auth_dependencies.py  test_main.py  test_redis_client.py
